# CFD

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
app/: config.json  main.ipynb  main.py  test.py
app/modules/: configuration.py  dimensionless_quantities.py  domain.py  simulation.py  visualisation.py
tests/: test_config.json
tests/modules/: test_dimensionless_quantities.py  test_domain.py  test_simulation.py
