[tool.poetry]
name = "cfd"
version = "0.1.0"
description = ""
authors = ["Silvan Wiedmer <silvan.wiedmer@bluewin.ch>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pydantic = "^2.9.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
